Bug 1236170 - Make Http2Session::UncompressAndDiscard push-aware. r=mcmanus